--- a/02_activities/assignments/assignment1.ipynb
+++ b/02_activities/assignments/assignment1.ipynb
@@ -169,18 +169,19 @@
     " #return False and stop the run as it's already not an anagram\n",
     "       return False \n",
     "  \n",
-    " #sort the word_a and word_b  with the same of lenght  \n",
-    "    if sorted(word_a.lower()) != sorted(word_b.lower()):\n",
-    " #return False if the sorting is not match with chars\n",
-    "        return False\n",
     "\n",
     "  # check the case sensitivity flag and condition for sorted       \n",
     "    if  is_case_sensitive is False:\n",
     " #check the sorted strings and validate the case sencitivity and case sencitivity Flag\n",
-    "        if sorted(word_a.lower()) == sorted(word_b.lower()):\n",
-    "          return  True\n",
-    "    else:\n",
-    "          return False\n",
+    "            if sorted(word_a.lower()) == sorted(word_b.lower()):\n",
+    "                  return  True\n",
+    "            else:\n",
+    "                  return False\n",
+    "    elif is_case_sensitive is True:\n",
+    "            if sorted(word_a) == sorted(word_b):\n",
+    "                  return True\n",
+    "            else:\n",
+    "                  return False\n",
     "\n",
     "# Run your code to check using the words below:\n",
     "anagram_checker(\"Silent\", \"listen\", False) # True"
