--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -112,30 +112,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def anagram_checker(word_a, word_b, is_case_sensitive):\n",
-    "  # Modify your existing code here\n",
+    "# Modify your existing code here\n",
     "def anagram_checker(word_a,word_b,is_case_sensitive):\n",
     " #check the word_a and word_b if it has the same lenght\n",
     "    if len(word_a) != len(word_b):\n",
     " #return False and stop the run as it's already not an anagram\n",
     "       return False \n",
     "  \n",
-    " #sort the word_a and word_b  with the same of lenght  \n",
-    "    elif sorted(word_a) != sorted(word_a):\n",
-    " #return False if the sorting is not match with chars\n",
-    "        return False\n",
+    "\n",
+    "  # check the case sensitivity flag and condition for sorted       \n",
+    "    if  is_case_sensitive is False:\n",
     " #check the sorted strings and validate the case sencitivity and case sencitivity Flag\n",
-    "    elif (sorted(word_a) == sorted(word_a)) and (word_a.lower() != word_b.lower()) and  is_case_sensitive is False:\n",
-    "       return  True\n",
-    "    elif (sorted(word_a) == sorted(word_a)) and (word_a.lower() == word_b.lower()) and  is_case_sensitive is False:\n",
-    "       return  True\n",
-    "    elif (sorted(word_a) == sorted(word_a)) and (word_a.lower() != word_b.lower()) and  is_case_sensitive is True:\n",
-    "       return  False\n",
-    "    else:\n",
-    "       return False\n",
+    "            if sorted(word_a.lower()) == sorted(word_b.lower()):\n",
+    "                  return  True\n",
+    "            else:\n",
+    "                  return False\n",
+    "    elif is_case_sensitive is True:\n",
+    "            if sorted(word_a) == sorted(word_b):\n",
+    "                  return True\n",
+    "            else:\n",
+    "                  return False\n",
     "\n",
     "# Run your code to check using the words below:\n",
-    "anagram_checker(\"Silent\", \"listen\", False) # True"
+    "anagram_checker(\"Silent\", \"listen\", False) # True\n"
    ]
   },
   {
